--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,7 @@ LepackOne.Site/App_Data/TEMP/ExamineIndexes/
 LepackOne.Site/App_Data/ExamineIndexes/
 LepackOne.Site/App_Data/TEMP/PluginCache/*
 LepackOne.Site/App_Data/TEMP/SEOChecker/
+LepackOne.Site/App_Data/TEMP/DistCache/
 LepackOne.Site/App_Data/Logs/*
 LepackOne.Site/App_Data/TEMP/Razor/
 LepackOne.Site/App_Data/FeedCache/
