--- a/LepackOne.Site/LepackOne.Site.csproj
+++ b/LepackOne.Site/LepackOne.Site.csproj
@@ -301,6 +301,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Plugins\LeReport\importReportData.html" />
+    <Content Include="App_Plugins\LeReport\leReport.controller.js" />
     <Content Include="App_Plugins\LeReport\leRequestHelper.service.js" />
     <Content Include="App_Plugins\MarkDownEditor\lib\Markdown.Converter.js" />
     <Content Include="App_Plugins\MarkDownEditor\lib\Markdown.Editor.js" />
@@ -356,6 +357,7 @@
     <Content Include="Views\umbNewsOverview.cshtml" />
     <Content Include="Views\umbTextPage.cshtml" />
     <Content Include="App_Plugins\LeReport\Dashboard.config.install.xdt" />
+    <Content Include="App_Plugins\LeReport\package.manifest" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
