--- a/LepackOne.Extension/LepackOne.Extension.csproj
+++ b/LepackOne.Extension/LepackOne.Extension.csproj
@@ -328,12 +328,20 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\LeReportController.cs" />
     <Compile Include="Controllers\PersonApiController.cs" />
     <Compile Include="Events\LepackOneApplicationEventHandler.cs" />
+    <Compile Include="Events\ServerVariableParser.cs" />
+    <Compile Include="ModelBinder\ReportFileModelBinder.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Report.cs" />
+    <Compile Include="Models\ReportDataFile.cs" />
+    <Compile Include="Models\ReportRecord.cs" />
+    <Compile Include="Models\ReportRecordViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Views\LeReport\" />
     <Folder Include="Views\PersonApi\" />
   </ItemGroup>
   <PropertyGroup>
