--- a/LepackOne.Site/packages.config
+++ b/LepackOne.Site/packages.config
@@ -3,6 +3,8 @@
   <package id="AutoMapper" version="3.0.0" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.1" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
+  <package id="ClosedXML" version="0.80.1" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net452" />
   <package id="Examine" version="0.1.69.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net452" />
   <package id="ImageProcessor" version="2.4.4.0" targetFramework="net452" />
