--- a/LepackOne.Extension/packages.config
+++ b/LepackOne.Extension/packages.config
@@ -9,6 +9,7 @@
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net452" />
   <package id="ImageProcessor" version="2.4.4.0" targetFramework="net452" />
   <package id="ImageProcessor.Web" version="4.6.4.0" targetFramework="net452" />
+  <package id="LINQtoCSV" version="1.5.0.0" targetFramework="net452" />
   <package id="Lucene.Net" version="2.9.4.1" targetFramework="net452" />
   <package id="Markdown" version="1.14.4" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net452" />
