--- a/LepackOne.Site/web.config
+++ b/LepackOne.Site/web.config
@@ -52,7 +52,7 @@
  </appSettings>
 	<connectionStrings>
 		<remove name="umbracoDbDSN" />
-		<add name="umbracoDbDSN" connectionString="server=WIN-OI6TDIRE9BQ;database=LepackOne;user id=sa;password='superadmin'" providerName="System.Data.SqlClient" />
+		<add name="umbracoDbDSN" connectionString="server=DESKTOP-J26QK31;database=LepackOne;user id=sa;password='superadmin'" providerName="System.Data.SqlClient" />
 		<!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
 	</connectionStrings>
 
