--- a/LepackOne.Site/Config/Dashboard.config
+++ b/LepackOne.Site/Config/Dashboard.config
@@ -120,4 +120,12 @@
       <control>/App_Plugins/LeReport/importReportData.html</control>
     </tab>
   </section>
+  <section alias="usyncBackOffice">
+    <areas>
+      <area>developer</area>
+    </areas>
+    <tab caption="uSync BackOffice">
+      <control>/App_Plugins/usync/uSyncDashboard.html</control>
+    </tab>
+  </section>
 </dashBoard>
