--- a/LepackOne.Site/packages.config
+++ b/LepackOne.Site/packages.config
@@ -43,5 +43,7 @@
   <package id="UmbracoCms" version="7.5.3" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.5.3" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
+  <package id="uSync" version="3.2.2.740" targetFramework="net452" />
+  <package id="uSync.Core" version="5.5.2.740" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
