--- a/LepackOne.Site/packages.config
+++ b/LepackOne.Site/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Archetype" version="1.13.1" targetFramework="net452" />
+  <package id="Archetype.Binaries" version="1.13.1" targetFramework="net452" />
   <package id="AutoMapper" version="3.0.0" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.1" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
@@ -34,6 +36,7 @@
   <package id="MiniProfiler" version="2.1.0" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="nuPickers" version="1.5.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
