--- a/LepackOne.Extension/packages.config
+++ b/LepackOne.Extension/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Archetype" version="1.13.1" targetFramework="net452" />
+  <package id="Archetype.Binaries" version="1.13.1" targetFramework="net452" />
   <package id="AutoMapper" version="3.0.0" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.1" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
