--- a/LepackOne.Site/LepackOne.Site.csproj
+++ b/LepackOne.Site/LepackOne.Site.csproj
@@ -394,6 +394,7 @@
     <Content Include="js\skel.min.js" />
     <Content Include="packages.config" />
     <Content Include="App_Plugins\ModelsBuilder\package.manifest" />
+    <Content Include="scripts\test.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Partials\Grid\Editors\Textstring.cshtml" />
     <Content Include="Views\Partials\Grid\Editors\Rte.cshtml" />
@@ -446,6 +447,7 @@
     <Content Include="Config\uSyncBackOffice.Config" />
     <Content Include="App_Plugins\uSync\package.manifest" />
     <Content Include="Views\Test.cshtml" />
+    <Content Include="Views\Partials\chartDesc.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
