--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@ LepackOne.Site/App_Plugins/LeReport/lib
 LepackOne.Site/App_Data/cache/*
 LepackOne.Site/Media/***/Cached/*
 /LepackOne.Site/App_Data/TEMP/uSync
+/LepackOne.Site/App_Data/Models
